# a-trade

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
.github/workflows/: ci.yml
atrade/: config.py
atrade/analyzer/: __init__.py  auction.py
atrade/backtest/: __init__.py  t0_simulator.py
atrade/data/: __init__.py  cache.py  eastmoney.py  history.py  quotes.py
atrade/filters/: __init__.py  stock_filter.py
atrade/indicators/: __init__.py  (+1 more)
config/: holdings.example.json  holdings.json  monitor.example.json  monitor.json
deploy/: a-trade-web.service
docs/: deploy_vps_git_push.md  setup_qqbot_proactive.md  setup_qqbot_publish.md
launchd/: com.a-trade.scheduler.plist
scripts/: deploy_vps.sh  discover_group_openid.py  install_launchd.sh  install_pre_push_env_sync.sh  install_web_service.sh  pre_push_sync_env.sh  run_backtest.py  run_per_symbol_report.py  run_scheduler.py  screen.py  test_botpy.py  test_c2c_proactive.py  test_e2e_push.py  test_openclaw.py  test_passive_reply.py  uninstall_launchd.sh  vps_install_deploy_target.sh  vps_update_worktree.sh
tests/: test_adaptive.py  test_auction_analyzer.py  test_cache.py  test_config.py  test_config_disabled.py  test_delivery_contract.py  test_delivery_ledger.py  test_delivery_router.py  test_dingtalk.py  test_headline.py  test_history.py  test_news_today_filter.py  test_notification_recovery.py  test_notify.py  test_per_symbol_init.py  test_quote_lookup.py  test_report.py  test_risk.py  test_run_per_symbol_report.py  test_scheduler_delivery.py  test_scheduler_reload.py  test_scheduler_reload_socket.py  test_screen.py  test_signals.py  test_stock_filter.py  test_styler.py  test_t0_accounting.py  test_t0_doublecounting.py  test_t0_simulator.py  test_t_confirmer.py  test_t_executor.py  test_t_monitor.py  test_t_trades_api.py  test_volatility.py  test_web_app.py  test_web_create_delete.py  test_web_e2e.py  test_web_reload_client.py  test_web_storage.py
(+78 files in other folders)
